<resources>

    <!--Suspects-->
    <string name="Plum" translatable="false">Plum</string>
    <string name="White" translatable="false">White</string>
    <string name="Scarlet" translatable="false">Scarlet</string>
    <string name="Green" translatable="false">Green</string>
    <string name="Mustard" translatable="false">Mustard</string>
    <string name="Peacock" translatable="false">Peacock</string>

    <!--Weapons-->
    <string name="Rope">Rope</string>
    <string name="Lead_pipe">Lead pipe</string>
    <string name="Knife">Knife</string>
    <string name="Wrench">Wrench</string>
    <string name="Candlestick">Candlestick</string>
    <string name="Revolver">Revolver</string>

    <!--Rooms-->
    <string name="Courtyard">Courtyard</string>
    <string name="Game_Room">Game Room</string>
    <string name="Study">Study</string>
    <string name="Dining_Room">Dining Room</string>
    <string name="Garage">Garage</string>
    <string name="Living_Room">Living Room</string>
    <string name="Kitchen">Kitchen</string>
    <string name="Bedroom">Bedroom</string>
    <string name="Bathroom">Bathroom</string>

    <string name="app_name" translatable="false">ClueHelp</string>
    <string name="start_button_text">Start!</string>
    <string name="welcome_image_description">Welcome image</string>
    <string name="insert_players_fragment_label">Insert players</string>
    <string name="insert_new_player_hint_text">Player</string>
    <string name="next_page_fab_description">next</string>
    <string name="insert_new_suspects_hint_text">Suspect</string>
    <string name="insert_suspects_fragment_label">Insert suspects</string>
    <string name="at_least_two_players_needed">Please, insert at least two players to proceed.</string>
    <string name="order_insertion_players">insert players starting from you, and going clockwise</string>
    <string name="remove_image_description">Remove</string>
    <string name="insert_new_weapon_hint_text">Weapon</string>
    <string name="at_least_six_suspects_needed">Please, insert at least six suspects to proceed.</string>
    <string name="at_least_six_weapons_needed">Please, insert at least six weapons to proceed.</string>
    <string name="insert_weapons_fragment_label">Insert weapons</string>
    <string name="insert_new_room_hint_text">Room</string>
    <string name="insert_rooms_fragment_label">Insert rooms</string>
    <string name="new_question_fab_description">Add a new question</string>
    <string name="at_least_nine_rooms_needed">Please, insert at least nine rooms to proceed.</string>
    <string name="suspects_header">Suspects</string>
    <string name="weapons_header">Weapons</string>
    <string name="rooms_header">Rooms</string>
    <string name="player_nobody">Nobody</string>
    <string name="who_asked_question">Who asked the question?</string>
    <string name="suspect_text_question">Who is the suspect?</string>
    <string name="weapons_text_question">What is the weapon?</string>
    <string name="room_text_question">What is the room?</string>
    <string name="who_answered_question">Who answered the question?</string>
    <string name="add_question_fragment_label">Add a question</string>
    <string name="fill_all_question_fields">Please, fill all the fields first!</string>
    <string name="all_questions_fragment_label">Questions list</string>
    <string name="menu_all_questions">All questions list</string>
    <string name="question_who_asked_short">Asks</string>
    <string name="question_who_answered_short">Answers</string>

</resources>