<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="it.zagoli.cluehelp.ui.mainGame.MainGameViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/who_asked_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/who_asked_question"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/who_asked_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/who_asked_text"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

            <TextView
                android:id="@+id/suspect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/suspect_text_question"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/who_asked_spinner" />

            <Spinner
                android:id="@+id/suspect_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suspect_text"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

            <TextView
                android:id="@+id/weapon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/weapons_text_question"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/suspect_spinner" />

            <Spinner
                android:id="@+id/weapon_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weapon_text"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

            <TextView
                android:id="@+id/room_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/room_text_question"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weapon_spinner" />

            <Spinner
                android:id="@+id/room_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_text"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

            <TextView
                android:id="@+id/who_answered_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/who_answered_question"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/room_spinner" />

            <Spinner
                android:id="@+id/who_answered_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/who_answered_text"
                tools:listitem="@layout/support_simple_spinner_dropdown_item" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_question_fab"
            style="@style/fabStyle"
            android:onClick="@{() -> viewModel.navigateToMainGameAndAddQuestion()}"
            android:src="@drawable/ic_baseline_done_24"
            android:contentDescription="@string/add_question_fab_description" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>